# blackBoxTesting-MCP

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  HARNESS.md  README.ko.md  README.md  RELEASING.md  ROADMAP.md  claude_desktop_config.example.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
blackbox_mcp/: __init__.py  bootstrap.py  cli.py  config.py  server.py
blackbox_mcp/browser/: __init__.py  listeners.py  locator.py  session.py
blackbox_mcp/testing/: __init__.py  library.py  recorder.py  report.py  runner.py  secrets.py
blackbox_mcp/tools/: __init__.py  _prompts.py  _registry.py  assertion.py  console.py  dialog.py  frame.py  generate.py  interact.py  library.py  mock.py  navigate.py  network.py  overlays.py  realbrowser.py  savereport.py  scenario.py  screenshot.py  session.py  snapshot.py  state.py  status.py  wait.py
examples/: README.md  demo_page.html  sample_report.html  sample_report.json  sample_report.md
scripts/: setup_env.sh
tests/: conftest.py  test_assert.py  test_audit_round2.py  test_backlog.py  test_cli.py  test_cli_unit.py  test_config.py  test_e2e.py  test_extensions.py  test_interact.py  test_library.py  test_locator.py  test_mcp_structure.py  test_mock.py  test_modes.py  test_navigate.py  test_overlays.py  test_popup.py  test_recorder.py  test_recovery.py  test_registry.py  test_report_fields.py  test_review_fixes.py  test_scenario.py  test_screenshot.py  test_security.py  test_snapshot.py  test_stability_fixes.py  test_state.py  test_trace.py
tests/fixtures/: basic.html  imperfect.html
