[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-blackbox-mcp"
dynamic = ["version"]
description = "UI Blackbox Tester MCP — natural-language UI testing for Claude Desktop via Playwright"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "연창현" }]
license = { text = "MIT" }
dependencies = [
    # <2: the mcp SDK has shipped breaking changes in minor releases before;
    # cap the major so a fresh install later still boots.
    "mcp>=1.2.0,<2",
    # >=1.60 for aria_snapshot mode/depth (>=1.59) and boxes (>=1.60), used for
    # snapshot trimming (Q1). See DESIGN.md §8 / §13.
    "playwright>=1.60.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ui-blackbox-mcp = "blackbox_mcp.server:main"
ui-blackbox = "blackbox_mcp.cli:main"

[tool.hatch.version]
path = "blackbox_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["blackbox_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "browser: needs a real Chromium (excluded from the fast unit lane: -m 'not browser')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Pragmatic starter set: pyflakes (F) + a slice of pycodestyle (E). Kept lean
# so the gate flags real problems (unused imports/names) without churn.
select = ["F", "E9"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Type-aware without being maximalist — catches obvious mistakes; not strict.
check_untyped_defs = false
warn_unused_ignores = true
